--- a/deel-1-flexbox-positioneren/styles/styles.css
+++ b/deel-1-flexbox-positioneren/styles/styles.css
@@ -1,1 +1,86 @@
 /*Schrijf hier jouw CSS*/
+/*Opdracht 1.1*/
+.opdracht-1 ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+/*Opdracht 1.2*/
+.opdracht-2 ul {
+    display: flex;
+}
+
+.opdracht-2 li {
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+/*Opdracht 1.3*/
+.opdracht-3 ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.opdracht-3 ul li:first-child {
+    align-self: flex-start;
+}
+
+.opdracht-3 ul li:nth-child(2) {
+    align-self: center;
+}
+
+.opdracht-3 ul li:last-child {
+    align-self: flex-end;
+}
+
+/*Opdracht 1.4*/
+.opdracht-4 ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5%;
+    row-gap: 10px;
+}
+
+.opdracht-4 li {
+    flex-basis: 9%;
+    /*text-align: left;*/
+    /*gap: 2%;*/
+    height: 500%;
+}
+/*Opdracht 1.5*/
+/*Bij het maken van opdracht 5 zag ik pas dat er classes toegepast mochten worden !*/
+
+.opdracht-5 div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border: dashed red;
+    height: 125px;
+}
+
+.column-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 2px dotted blue
+}
+
+.column-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px dotted orange;
+
+}
+
+.column-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    border: 2px dotted greenyellow;
+}
+
