--- a/deel-1-flexbox-positioneren/styles/styles.css
+++ b/deel-1-flexbox-positioneren/styles/styles.css
@@ -1,12 +1,14 @@
 /*Schrijf hier jouw CSS*/
-/*Opdracht 1.1*/
+/*-----------------------------------------------------------------*/
+/*Deel 1 - Opdracht 1*/
 .opdracht-1 ul {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-/*Opdracht 1.2*/
+/*-----------------------------------------------------------------*/
+/*deel 1 - opdracht 2*/
 .opdracht-2 ul {
     display: flex;
 }
@@ -16,7 +18,8 @@
     flex-basis: 0;
 }
 
-/*Opdracht 1.3*/
+/*-----------------------------------------------------------------*/
+/*opdracht 1.3*/
 .opdracht-3 ul {
     display: flex;
     flex-direction: column;
@@ -35,7 +38,8 @@
     align-self: flex-end;
 }
 
-/*Opdracht 1.4*/
+/*-----------------------------------------------------------------*/
+/*deel 1 - opdracht 4*/
 .opdracht-4 ul {
     display: flex;
     flex-wrap: wrap;
@@ -49,8 +53,10 @@
     /*gap: 2%;*/
     height: 500%;
 }
-/*Opdracht 1.5*/
-/*Bij het maken van opdracht 5 zag ik pas dat er classes toegepast mochten worden !*/
+
+/*-----------------------------------------------------------------*/
+/*deel 1 - opdracht 5*/
+/*bij het maken van opdracht 5 zag ik pas dat er classes toegepast mochten worden..! */
 
 .opdracht-5 div{
     display: flex;
