--- a/deel-2-flexbox-layout/opdracht-2/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-2/styles/styles.css
@@ -1,1 +1,28 @@
 /*Schrijf hier jouw CSS*/
+body {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+    width: 100vw;
+}
+
+.col-1 {
+    flex: 1;
+    min-width: 150px;
+}
+
+.col-2 {
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+}
+
+.header, .footer {
+    height: 20vh;
+}
+
+.article {
+    height: 60vh;
+}
