--- a/deel-2-flexbox-layout/opdracht-4/styles/styles.css
+++ b/deel-2-flexbox-layout/opdracht-4/styles/styles.css
@@ -1,1 +1,112 @@
-/*Schrijf hier jouw CSS*/
+/*!*Schrijf hier jouw CSS*!*/
+
+/*body {*/
+/*    display: flex;*/
+/*    flex-direction: row;*/
+/*    height: 100vh;*/
+/*}*/
+
+/*!* linkerkant = nav *!*/
+/*.outer-col-1 {*/
+/*    flex-basis: 20%;*/
+/*    flex-grow: 0;*/
+/*    flex-shrink: 0;*/
+/*}*/
+
+/*!* midden+rechts = header + article + footer + aside *!*/
+/*.outer-col-2 {*/
+/*    flex-direction:  column;*/
+/*    flex-basis: 80%;*/
+/*    border: 2px dashed red;*/
+/*    height: 100vh;*/
+/*}*/
+
+
+/*.header {*/
+/*    flex-basis: 20vh;*/
+/*    border: 2px dashed lightcyan;*/
+/*}*/
+
+/*.article {*/
+/*    flex-grow: 1;*/
+/*    !*height: 60vh;*!*/
+/*}*/
+
+/*.footer {*/
+/*    flex-basis: 20vh;*/
+/*}*/
+
+/*!* article + footer + aside*!*/
+/*.inner-row {*/
+/*    !*flex-direction: row;*!*/
+/*    border: 2px dashed mediumpurple;*/
+/*}*/
+
+/*!*!* article + footer *!*!*/
+/*!*.inner-col  {*!*/
+/*!*    border: dashed 2px darkorange;*!*/
+/*!*}*!*/
+
+/*.aside {*/
+/*    display: flex;*/
+/*    flex-basis: 20%;*/
+/*    flex-grow: 1;*/
+/*    align-items: flex-end;*/
+/*}*/
+
+
+/*nieuwe poging*/
+
+body {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+}
+
+/*!* linkerkant = nav *!*/
+.outer-col-1 {
+    flex-basis: 20%;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+/* midden+rechts = header + article + footer + aside */
+.outer-col-2 {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 80%;
+    height: 100vh;
+}
+
+.header {
+    height: 15vh;
+    width: 100%;
+}
+
+/* article + footer + aside*/
+.inner-row {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+}
+
+/* article + footer */
+.inner-col {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 5;
+    border: dashed 2px darkorange
+}
+
+.article {
+    flex-grow: 1;
+}
+
+.footer {
+    height: 15vh;
+}
+
+.aside {
+    flex-basis: 10%;
+    flex-grow: 1;
+}
